# web2pdf

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
deltabot_web2pdf/: __init__.py
web2pdf/: hooks.py
